--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Chelaa Surprise</title>
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
         <div id="welcome-overlay">
@@ -26,7 +27,14 @@
             <img src="./images/r5.jpeg" alt="">
             <img src="./images/r6.jpeg" alt="">
             <img src="./images/r7.jpeg" alt="">
-            
+            <img src="./images/r8.jpeg" alt="">
+            <img src="./images/r9.jpeg" alt="">
+            <img src="./images/r10.jpeg" alt="">
+            <img src="./images/r11.jpeg" alt="">
+            <img src="./images/r12.jpeg" alt="">
+            <img src="./images/r13.jpeg" alt="">
+            <img src="./images/r14.jpeg" alt="">
+            <img src="./images/r15.jpeg" alt="">        
             <p>You are loved Chelaa</p>
         </div>
         <div id="ground"></div>
